--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools">
-<!--    <uses-permission android:name="android.permission.NFC" />-->
+
     <application
         android:allowBackup="true"
         android:dataExtractionRules="@xml/data_extraction_rules"
@@ -13,11 +13,23 @@
         android:theme="@style/Theme.MagnetTimer"
         tools:targetApi="31">
         <activity
+            android:name=".timer_on"
+            android:screenOrientation="landscape"
+            />
+        <activity
+            android:name=".timer_off"
+            android:exported="false"
+
+            />
+        <activity
             android:name=".MainActivity"
             android:exported="false" />
         <activity
             android:name=".splash"
             android:exported="true">
+
+
+
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -25,4 +37,5 @@
             </intent-filter>
         </activity>
     </application>
+
 </manifest>
